src/App.css
 body{
 
  padding: 0;
  margin: 0;
  scroll-behavior: smooth;
  background-color: red;
  background-image: url('./images/texture2.png');
  background-position: center top;
 overflow: hidden;
  overscroll-behavior-y:none;
 
}
html{
  scroll-behavior: smooth;
}


#canvas{
overflow-y: hidden;
 height:100vh; 
 
 border-color: white;
 position: fixed;
 top: 0;
 left: 0;
 width: 100%;
 height: 100%;
 z-index: 0;
 overflow: hidden;
 
}


.glow {
  
    position:fixed;
    width: 25rem;
    height: 25rem;
    border-radius: 50%;
  z-index:2;
    background: radial-gradient(rgba(248, 246, 245, 0.080)0%, transparent 120%);
    /* Radial gradient from the center (circle) with the glow color to transparent */
    transform: translate(-50%, -50%);
    pointer-events: none;
   
    mix-blend-mode:normal;
    box-shadow: 0 0 10rem rgba(248, 246, 245, 0.080); /* Initial glow shadow */
  }
 

